monticore-generator/src/test/resources/cocos/invalid/A4150/A4150.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4150;

grammar A4150 extends mc.grammars.types.TestTypes, mc.grammars.types.TestTypes {

  A = "foo";

}